--- a/Genealogy.WebApplication/Views/_ViewImports.cshtml
+++ b/Genealogy.WebApplication/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using Genealogy.WebApplication.Core
 @using Genealogy.WebApplication.Models	
 @using velocist.Services;
+@using velocist.Services.Import;
 @using velocist.Web
 @using velocist.Web.Extensions
 @using Microsoft.Extensions.Localization
