--- a/Genealogy.WebApplication/Views/FileViewer/Index.cshtml
+++ b/Genealogy.WebApplication/Views/FileViewer/Index.cshtml
@@ -14,15 +14,14 @@
 				<form method="post" asp-action="Index" aps-controller="FileViewer" class="form-row col-12">
 					<div class="col-12 col-sm-6">
 						<div class="input-group">
-							<input id="file" name="file" type="file" class="form-control" aria-describedby="btnRead" aria-label="Upload">
+							<input id="file" type="file" name="file" class="form-control" aria-describedby="btnRead" aria-label="Upload">
 							<span class="input-group-text">Row</span>
-							<input type="text" class="form-control" placeholder="-1" aria-label="Row" title="@SharedTranslations["Fila columnas"]">
+							<input id="row" type="text" name="row" class="form-control" placeholder="-1" aria-label="Row" title="@SharedTranslations["Fila columnas"]">
 							<button class="btn btn-outline-secondary" type="button" id="btnRead" onclick="UploadFileViewer('@viewProperties.ControllerName', 'Index');">@SharedTranslations["Leer"]</button>
 						</div>
 					</div>
 				</form>
 				<div id="tableData">
-					<partial name="~/Views/FileViewer/_List.cshtml" />
 				</div>
 			</div>
 		</div>
@@ -56,6 +55,9 @@
 }
 @section Scripts {
 	@{
-		await Html.RenderPartialAsync("~/Views/Shared/Scripts/_TableScriptsPartial.cshtml");
+		// await Html.RenderPartialAsync("~/Views/Shared/Scripts/_TableScriptsPartial.cshtml");
 	}
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+	<script src="https://cdn.datatables.net/v/bs5/jszip-3.10.1/dt-1.13.8/b-2.4.2/b-colvis-2.4.2/b-html5-2.4.2/b-print-2.4.2/cr-1.7.0/date-1.5.1/fc-4.3.0/fh-3.4.0/kt-2.11.0/r-2.5.0/rg-1.4.1/rr-1.4.1/sc-2.3.0/sb-1.6.0/sp-2.2.0/sl-1.7.0/sr-1.3.0/datatables.min.js"></script>
 }
