--- a/Genealogy.WebApplication/Views/FileViewer/_Instructions.cshtml
+++ b/Genealogy.WebApplication/Views/FileViewer/_Instructions.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="row">
 	<div class="card border-dark">
 		<h5 class="card-header text-center">@SharedTranslations["¿Cómo funciona el Visor?"]</h5>
-		<div class="card-body text-dark">
+		<div class="card-body ">
 			<div class="row  mb-3">
 				<div class="col-12">
 					<h6 class="card-subtitle mb-2 text-muted">@SharedTranslations["Instrucciones de uso"]</h6>
