Add project test Refactor Services

--- a/Genealogy.WebApplication/Views/FileViewer/Index.cshtml
+++ b/Genealogy.WebApplication/Views/FileViewer/Index.cshtml
@@ -21,6 +21,11 @@
 						</div>
 					</div>
 				</form>
+				<div class="col-12 col-sm-6">
+					<div class="input-group">
+						<button class="btn btn-outline-secondary" type="button" id="btnSave" @* onclick="UploadFileViewer('@viewProperties.ControllerName', 'Index');" *@>@SharedTranslations["Guardar"]</button>
+					</div>
+				</div>
 				<div id="tableData">
 				</div>
 			</div>
